# nv-embedding-cache

./: .clang-format  .gitignore  .gitmodules  .nspect-allowlist.toml  CHANGELOG.md  CITATION.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  print_env.sh  pyproject.toml  setup.py  version.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
benchmarks/: benchmark_util.py  multi_gpu_bench.py  requirements.txt  single_gpu_bench.py
cmake/: check_torch_stable_abi.cpp  nve_avx.cmake  nve_torch.cmake
cpu_ops/: cpu_gather.h  cpu_pooling.h  cpu_update.h
cuda_ops/: cuda_common.h  cuda_utils.cuh  dedup_grads_kernel.cuh  embedding_bag_kernel.cuh  find_and_combine_kernel.cuh  gather_keys_data_ptrs.cuh  gradient_calculator.cuh  kernels_common.cuh  pipeline_gather.cuh  scatter.cuh  update_accumulate.cuh
docs/: advanced.md  benchmarks.md  c_api.md  cpp_api.md  multi_gpu.md  overview.md  python_api.md  samples.md
include/: allocator.hpp  bit_ops.hpp  buffer_wrapper.hpp  common.hpp  cuda_support.hpp  default_allocator.hpp  distributed.hpp  embedding_layer.hpp  execution_context.hpp  gpu_embedding_layer.hpp  gpu_table.hpp  hierarchical_embedding_layer.hpp  host_embedding_layer.hpp  host_table.hpp  host_table_detail.hpp  insert_heuristic.hpp  json_support.hpp  layer_utils.hpp  linear_embedding_layer.hpp  linear_host_table.hpp  logging.hpp  memblock.hpp  mpi_utils.hpp  numa_support.hpp  nve_c_api.h  nve_types.hpp  plugin.hpp  resizeable_buffer.hpp  (+8 more)
plugins/: CMakeLists.txt
plugins/abseil/: CMakeLists.txt
plugins/abseil/include/: abseil_flat_map_table.hpp
plugins/abseil/src/: abseil_flat_map_table.cpp  plugin.cpp
plugins/abseil/tests/: CMakeLists.txt  abseil_plugin_tests.cpp
plugins/nvhm/: CMakeLists.txt
plugins/nvhm/include/: nvhm_map_table.hpp
plugins/nvhm/src/: nvhm_map_table.cpp  plugin.cpp
plugins/nvhm/tests/: CMakeLists.txt  nvhm_plugin_tests.cpp
plugins/phmap/: CMakeLists.txt
plugins/phmap/include/: phmap_flat_map_table.hpp
plugins/phmap/src/: phmap_flat_map_table.cpp  plugin.cpp
plugins/phmap/tests/: CMakeLists.txt  phmap_plugin_tests.cpp
plugins/redis/: CMakeLists.txt
plugins/redis/include/: redis_cluster_table.hpp  redis_conn.hpp  redis_utils.hpp
plugins/redis/src/: plugin.cpp  redis_cluster_table.cpp
plugins/redis/tests/: CMakeLists.txt  redis_plugin_tests.cpp
plugins/rocksdb/: CMakeLists.txt
plugins/rocksdb/include/: rocksdb_table.hpp  rocksdb_utils.hpp
plugins/rocksdb/src/: plugin.cpp  rocksdb_table.cpp  rocksdb_utils.cpp
plugins/rocksdb/tests/: CMakeLists.txt  rocksdb_plugin_tests.cpp
python/pynve/bindings/: CMakeLists.txt  binding_layers.hpp  binding_memblock.cpp  binding_memblock.hpp  binding_serialization.cpp  binding_serialization.hpp  binding_tables.cpp  binding_tables.hpp  python_binding.cu
python/pynve/torch_bindings/: CMakeLists.txt  README.md  nve_loader.hpp  nve_registry.cu  nve_registry.hpp  nve_torch_ops.cu  nve_torch_ops_cpu.cpp  torch_binding.cpp
samples/c_api_custom_remote/: CMakeLists.txt  README.md  c_api_custom_remote_sample.cpp
samples/c_api_custom_remote/custom_remote_plugin/src/: plugin.cpp
samples/common/: CMakeLists.txt  datagen.h  engine_harness.cu  engine_harness.h  input_gen.cuh
samples/common/custom_remote_plugin/: CMakeLists.txt
samples/common/custom_remote_plugin/include/: custom_remote_table.hpp
samples/common/custom_remote_plugin/src/: custom_remote_table.cpp
samples/cpp_inference/: CMakeLists.txt  README.md  export_for_cpp.py  inference.cu
samples/ecache/common/: CMakeLists.txt  common.cpp  common.h  cupti_profiling.cu  cupti_profiling.h  memblock.h
samples/ecache/wrapper_sample/: CMakeLists.txt  cache_metrics.h  cache_taskqueue.cu  cache_taskqueue.h  cache_wrapper.cu  cache_wrapper.h  communicator.cu  communicator.h  mock_cache.cu  mock_cache.hpp  training_wave.h  work_queue.h  wrapper_sample.cpp
samples/import_sample/: CMakeLists.txt  README.md  gen_np_files.py  import_sample.cpp
samples/simple_cpp/: CMakeLists.txt  README.md  simple_cpp.cu
src/: CMakeLists.txt  common.cpp  default_allocator.cpp  distributed.cpp  execution_context.cpp  gpu_embedding_layer.cu  gpu_table.cu  hierarchical_embedding_layer.cu  host_embedding_layer.cpp  host_table.cpp  insert_heuristic.cpp  layer_utils.cpp  linear_embedding_layer.cu  linear_host_table.cpp  memblock.cpp  mpi_utils.cpp  numa_support.cpp  nve_c_api_context.cpp  nve_c_api_error.cpp  nve_c_api_heuristic.cpp  nve_c_api_internal.hpp  nve_c_api_layers.cpp  nve_c_api_tables.cpp  nve_c_api_threadpool.cpp  nve_c_api_util.cpp  serialization.cpp  stl_map_backed_table.cpp  table.cpp  table_utils.cpp  thread_pool.cpp  thread_pool_base.cpp
tests/: CMakeLists.txt  conftest.py  test_utils.hpp
tests/benchmarks/: test_benchmarks.py
tests/c_api/: CMakeLists.txt  c_api_basic_test.cpp  c_api_layers_test.cpp
tests/common/: CMakeLists.txt  allocator_test.cpp  buffer.h  buffer_wrapper_test.cpp  check_error.h  insert_heuristic_test.cpp  logger_test.cpp  mpi_buffer_test.cpp  test_buffer.h  thread_pool_test.cpp
tests/ecache/: CMakeLists.txt  api_test.cu  utils_test.cu  wrapper_test.cu  wrapper_test_large.cu
tests/embedding_layer/: CMakeLists.txt  emb_layer_utils.cpp  emb_layer_utils.hpp  gpu_layer_test.cpp  hier_layer_test.cpp  host_layer_test.cpp  mock_host_table.hpp  redis_cluster.sh  uvm_layer_test.cpp
tests/gpu_table/: CMakeLists.txt  flow_unit_tests.cu  gpu_table_test.cpp
tests/host_table/: CMakeLists.txt  find_insert_tests.cpp  general_tests.cpp  stl_map_table_tests.cpp
tests/kernels/: CMakeLists.txt  cpu_kernel_unit_tests.cpp  cpu_pooling_unit_tests.cpp  gpu_insert_tests.cu  gpu_kernel_unit_tests.cu  unit_tests.cu
tests/license/: ignore_lines.txt  license_test.py
tests/linear_host_table/: CMakeLists.txt  linear_host_table_test.cpp
tests/python_binding/: test_dcp_load.py  test_distributed.py  test_host_cpu.py  test_nve_export.py  test_pytorch.py  test_samples_sanity.py
tests/sample_sanity/: CMakeLists.txt  sample_sanity_test.cpp
(+58 files in other folders)
