# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = [
    "cmake==3.31.6",
    "setuptools==75.8.2",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "pynve"
dynamic = ["version"]
dependencies = [
  "torch",
]
description = "pynve - python bindings for NV Embedding Cache"
authors = [
    { name = "NVIDIA Corporation" },
]
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Developers",
    "License :: Apache-2.0",
    "Programming Language :: C++",
    "Programming Language :: Python",
]
